	  Gets rid of an "Unable to format username" error at login. (#13883)

	Gadu-Gadu:
	* Possibility to require encryption. Also, using encryption when
	  available is default option now. (Tomasz Wasilczyk)
	* Show local time for incoming messages. (Tomasz Wasilczyk) (#4579)
	* Detailed descriptions on connection failures. (Tomasz Wasilczyk)
	  (#14648)

	MXit:
	* Remove all reference to Hidden Number.
	* Fix decoding of font-size changes in the markup of received messages.
	* Ignore new invites to join a GroupChat if you're already joined, or
	  still have a pending invite.
	* The buddy's name was not centered vertically in the buddy-list if they
	  did not have a status-message or mood set.

	XMPP:
	* Strip element prefixes from XHTML-IM messages as they're presented
	  to the core (and UIs) as incoming messages (Thijs Alkemade).
	  (#14529)

version 2.10.1 (??/??/????):
	SILC:
	* Fix CVE-2011-3594, by UTF-8 validating incoming messages before
	  passing them to glib or libpurple.  Identified by Diego Bauche
	  Madero from IOActive.  (#14636)

version 2.10.0 (08/18/2011):
	Pidgin:
	* Make the max size of incoming smileys a pref instead of hardcoding it.
	  (Quentin Brandon) (#5231)
	* Added a plugin information dialog to show information for plugins
	  that aren't otherwise visible in the plugins dialog.
	* Fix building with GTK+ earlier than 2.14.0 (GTK+ 2.10 is still the
	  minimum supported) (#14261)

	libpurple:
	* Fix a potential crash in the Log Reader plugin when reading QIP logs.
	* Fix a large number of strcpy() and strcat() invocations to use
	  strlcpy() and strlcat(), etc., forestalling an entire class of
	  string buffer overrun bugs.
	  (The Electronic Frontier Foundation, Dan Auerbach, Chris Palmer,
	  Jacob Appelbaum)
	* Change some filename manipulations in filectl.c to use MAXPATHLEN
	  instead of arbitrary length constants.  (The Electronic Frontier
	  Foundation, Dan Auerbach, Chris Palmer, Jacob Appelbaum)